--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,7 @@
 <app-header></app-header>
-<app-list></app-list>
+
+<div class="main-content">
+    <router-outlet></router-outlet>
+</div>
+
+<app-footer></app-footer>
