--- a/frontend/src/app/courses/list/list.component.css
+++ b/frontend/src/app/courses/list/list.component.css
@@ -1,14 +1,3 @@
-.courses-list {
-    max-width: 1500px;
-    margin: 0 auto;
-    padding: 40px 0;
-}
-.courses-list h1 {
-    margin-top: 0;
-    margin-bottom: 40px;
-    font-size: 40px;
-    padding-left: 15px;
-}
 .course-item {
     width: calc(33.33% - 30px);
     display: inline-block;
@@ -46,6 +35,7 @@
     font-size: 22px;
     text-align: center;
     text-decoration: none;
+    cursor: pointer;
 }
 .course-info a:hover {
     background-color: #00cd8c;
