--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -11,6 +11,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Russo One';
 }
+/* Colors and styles */
 .green-color {
     color: #00cd8c;
 }
@@ -37,4 +38,18 @@ h1, h2, h3, h4, h5, h6 {
 }
 .gray-border {
     border-color: #333;
+}
+/* Common elements styles */
+.main-content {
+    max-width: 1500px;
+    margin: 0 auto;
+    padding: 40px 0;
+    min-height: calc(100vh - 195px);
+}
+.page-title {
+    color: #716ef9;
+    margin-top: 0;
+    margin-bottom: 40px;
+    font-size: 40px;
+    padding-left: 15px;
 }
