--- a/frontend/src/app/core/header/header.component.html
+++ b/frontend/src/app/core/header/header.component.html
@@ -2,10 +2,10 @@
     <div class="top-bar green-back">
         <ul class="top-nav">
             <li>
-                <a routerLink="/login">Login</a>
+                <a routerLink="/user/login" routerLinkActive="active">Login</a>
             </li>
             <li>
-                <a routerLink="/register">Register</a>
+                <a routerLink="/user/register" routerLinkActive="active">Register</a>
             </li>
             <li>
                 <a><fa-icon [icon]="faUser"></fa-icon></a>
@@ -24,10 +24,10 @@
         <div class="navigation">
             <ul class="nav">
                 <li>
-                    <a routerLink="/">Home</a>
+                    <a routerLink="/course/list" routerLinkActive="active">Home</a>
                 </li>
                 <li>
-                    <a routerLink="/about">About</a>
+                    <a routerLink="/about" routerLinkActive="active">About</a>
                 </li>
                 <li>
                     <a href="">My Courses</a>
@@ -39,7 +39,7 @@
                     <a href="">Add Course</a>
                 </li>
                 <li>
-                    <a routerLink="/contact">Contact</a>
+                    <a routerLink="/contact" routerLinkActive="active">Contact</a>
                 </li>
             </ul>
         </div>
