--- a/frontend/src/app/courses/list/list.component.html
+++ b/frontend/src/app/courses/list/list.component.html
@@ -1,13 +1,5 @@
+<h1 class="page-title">Courses</h1>
+<app-loader *ngIf="!courses"></app-loader>
 <div class="courses-list" *ngIf="courses">
-    <h1 class="page-title">Courses</h1>
-    <div *ngFor="let course of courses" class="course-item">
-        <img [src]="course.image" alt="">
-        <div class="course-info">
-            <h4 class="green-color">{{course.title}}</h4>
-            <p>
-                {{course.description}}
-            </p>
-            <a class="green-border green-color" (click)="selectCourseHandler(course._id)">Details</a>
-        </div>
-    </div>
+    <app-list-items [courses]="courses"></app-list-items>
 </div>
