--- a/frontend/src/app/core/header/header.component.html
+++ b/frontend/src/app/core/header/header.component.html
@@ -33,7 +33,7 @@
                     <a routerLink="/course/my-courses" routerLinkActive="active">My Courses</a>
                 </li>
                 <li *ngIf="isLogged">
-                    <a href="">Courses Enrolled</a>
+                    <a routerLink="/course/courses-enrolled" routerLinkActive="active">Courses Enrolled</a>
                 </li>
                 <li *ngIf="isLogged">
                     <a routerLink="/course/add" routerLinkActive="active">Add Course</a>
