--- a/frontend/src/app/courses/course-details/course-details.component.css
+++ b/frontend/src/app/courses/course-details/course-details.component.css
@@ -14,6 +14,7 @@
     padding: 30px;
     border-radius: 10px;
     margin-left: 20px;
+    position: relative;
 }
 .course-text h1 {
     color: #FFF;
@@ -24,6 +25,20 @@
     font-size: 20px;
     color: #FFF;
     margin-bottom: 0;
+}
+.enroll-course {
+    border: 2px solid #FFF;
+    color: #FFF;
+    font-size: 25px;
+    position: absolute;
+    bottom: 30px;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.enroll-course:hover {
+    background: #FFF;
+    color: #716EF9;;
 }
 .course-error {
     text-align: center;
