--- a/frontend/src/app/courses/course-details/course-details.component.html
+++ b/frontend/src/app/courses/course-details/course-details.component.html
@@ -4,6 +4,7 @@
     <div class="course-text">
         <h1>{{course.title}}</h1>
         <p>{{course.description}}</p>
+        <a class="enroll-course" (click)="enrollCourse(course._id)">Enroll</a>
     </div>
 </div>
 <div class="course-error" *ngIf="error">
