--- a/frontend/src/app/static/about/about.component.html
+++ b/frontend/src/app/static/about/about.component.html
@@ -1,3 +1,12 @@
 <div class="about-page">
     <h1 class="page-title">About</h1>
+    <div class="about-content">
+        <p class="grey-color">
+            Course Ground is an app for sharing courses and enrolling in them. You can share your course with every other registered user and you can also enroll in others courses.
+        </p>
+        <p class="grey-color">
+            Thank you for being part of us. We greatly appreciate your presence in our app.
+        </p>
+        <img src="/assets/logo-big.png" alt="">
+    </div>
 </div>
