--- a/frontend/src/app/user/register/register.component.html
+++ b/frontend/src/app/user/register/register.component.html
@@ -11,31 +11,33 @@
         </div>
         <div class="field-holder">
             <label for="email" class="grey-color">Email</label>
-            <input type="text" #emailInput="ngModel" ngModel name="email" id="email" required minlength="6">
-            <div *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)">
-                <div *ngIf="emailInput.errors.required && emailInput.touched" class="input-error">Please enter an email</div>
-                <div *ngIf="emailInput.errors.minlength && emailInput.touched" class="input-error">Email should be at least 6 chars long</div>
+            <input type="text" #emailInput="ngModel" ngModel name="email" id="email" required email>
+            <div class="errors">
+                <div *ngIf="emailInput.errors?.required && emailInput.touched" class="input-error">Please enter an email</div>
+                <div *ngIf="emailInput.errors?.email && emailInput.touched" class="input-error">Please enter a valid email</div>
             </div>
         </div>
-        <div class="field-holder">
-            <label for="password" class="grey-color">Password</label>
-            <input type="password" #passwordInput="ngModel" ngModel name="password" id="password" required minlength="6">
-            <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)">
-                <div *ngIf="passwordInput.errors.required && passwordInput.touched" class="input-error">Please enter a password</div>
-                <div *ngIf="passwordInput.errors.minlength && passwordInput.touched" class="input-error">Password should be at least 6 chars long</div>
+        <div #passwordsGroup="ngModelGroup" ngModelGroup="passwords" appPasswordMatch>
+            <div class="field-holder">
+                <label for="password" class="grey-color">Password</label>
+                <input type="password" #passwordInput="ngModel" ngModel name="password" id="password" required minlength="6">
+                <div *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)">
+                    <div *ngIf="passwordInput.errors.required && passwordInput.touched" class="input-error">Please enter a password</div>
+                    <div *ngIf="passwordInput.errors.minlength && passwordInput.touched" class="input-error">Password should be at least 6 chars long</div>
+                </div>
             </div>
-        </div>
-        <div class="field-holder">
-            <label for="confirm-password" class="grey-color">Confirm Password</label>
-            <input type="password" #confirmPasswordInput="ngModel" ngModel name="confirm-password" id="confirm-password" required validateEqual="passwordInput">
-            <div *ngIf="confirmPasswordInput.invalid && (confirmPasswordInput.dirty || confirmPasswordInput.touched)">
-                <div *ngIf="confirmPasswordInput.errors.required && confirmPasswordInput.touched" class="input-error">Please enter a confirm password</div>
-                <div *ngIf="confirmPasswordInput.valid ||  
-                (confirmPasswordInput.pristine && !registerForm.submitted)" class="input-error">Both passwords must be the same!</div>
+            <div class="field-holder">
+                <label for="confirmPassword" class="grey-color">Confirm Password</label>
+                <input type="password" #confirmPasswordInput="ngModel" ngModel name="confirmPassword" id="confirmPassword" required>
+                <div class="errors">
+                    <div *ngIf="confirmPasswordInput.errors?.required && confirmPasswordInput.touched" class="input-error">Please enter a confirm password</div>
+                    <div *ngIf="passwordsGroup.touched && passwordsGroup.invalid" class="input-error">Passwords must match!</div>
+                </div>
             </div>
         </div>
         <div class="submit-btn-holder">
             <button [disabled]="registerForm.invalid">Register</button>
         </div>
     </form>
+    {{registerForm.value | json}}
 </div>
