--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -152,3 +152,14 @@ h1, h2, h3, h4, h5, h6 {
     opacity: 0.6;
     cursor: not-allowed;
 }
+.uploadcare--widget__button_type_open {
+    background: #00cd8c !important;
+    color: #fff !important;
+    font-size: 20px !important;
+    border: 2px solid #00cd8c;
+    cursor: pointer;
+}
+.uploadcare--widget__button_type_open:hover {
+    background: #FFF !important;
+    color: #00cd8c !important;
+}
